# ocr-server

./: pyproject.toml
boards/: models.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py
ocr/: views.py
static/script/: board-api.js
static/style/: grid.css
templates/: board.html  board_form.html  footer.html  index.html
users/migrations/: 0001_initial.py
