[tool.poetry]
name = "ocr-server"
version = "0.1.0"
description = ""
authors = ["qkrrb0032 <qkrrb0032@naver.com>"]
readme = "README.md"
packages = [{include = "ocr_server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
pyuploadcare = "^4.1.0"
pillow = "^10.0.0"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
